tests/ui/cfg/field_sneaky.stderr
error[E0027]: pattern does not mention field `__field`
 --> $DIR/field_sneaky.rs:9:14
  |
9 | #[pin_project] //~ ERROR pattern does not mention field `__field`
  |              ^ missing field `__field`
